<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tic_tac_toe"
        android:background="@color/red"
        android:textSize="36sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/scoreLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView">

        <ImageView
            android:id="@+id/crossScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            app:srcCompat="@drawable/cross" />

        <TextView
            android:id="@+id/crossDigit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:background="@color/lightGreen"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/zeroDigit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:background="@color/lightGreen"
            android:layout_marginStart="1dp"
            android:textColor="@color/white"
            android:text="@string/_0"
            android:textAlignment="center"
            android:textSize="48sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/zeroScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            app:srcCompat="@drawable/oblack"
            android:contentDescription="@string/scorecard" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="360dp"
        android:contentDescription="@string/grid"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="18dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/grid" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="360dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="boxClick"
                android:padding="20sp"
                android:tag="0"
                tools:ignore="NestedWeights" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="boxClick"
                android:padding="20sp"
                android:tag="1"
                android:contentDescription="@string/imageBox" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="boxClick"
                android:padding="20sp"
                android:tag="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="boxClick"
                android:padding="20sp"
                android:tag="3" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="boxClick"
                android:padding="20sp"
                android:tag="4" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="boxClick"
                android:padding="20sp"
                android:tag="5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="boxClick"
                android:padding="20sp"
                android:tag="6" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="boxClick"
                android:padding="20sp"
                android:tag="7" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="boxClick"
                android:padding="20sp"
                android:tag="8" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textSize="24sp"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:textColor="#30ccac"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/status"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/playAgain"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"
            android:text="@string/new_game" />

        <Button
            android:id="@+id/exit"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:background="@drawable/rounded_corner"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/exit"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="10dp"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="120dp"
        app:cardBackgroundColor="@color/white"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardConstraints"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:lottie_rawRes="@raw/win"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"/>

            <TextView
                android:id="@+id/resultText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#ff0000"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="" />

            <Button
                android:id="@+id/playAgainCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="24dp"
                android:background="@drawable/rounded_corner"
                android:layout_marginStart="24dp"
                android:text="@string/play_again" />

            <Button
                android:id="@+id/exitCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="24dp"
                android:text="@string/exit_now" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>